# softserve-machine-learning-crash-course

./: pyproject.toml
FINAL PROJECT/: details.md  rnn-complete-guide-imdb-sentiment-analysis.ipynb
MLandDS/: Data_Collection_and_Scraping.ipynb
S10 - data processing/: Sprint10_Data_Preprocessing.ipynb  data.csv
S11 - Data Visualization and Exploration/: bokeh_plot.html
S12 -NLP/: Sprint_12_NLP.ipynb
S13 - Regression/: Sprint_13_Regression.ipynb
S14 - Classification/: Sprint_14_Classification.ipynb
S15 - Unsupervised_Learning/: Sprint_15_Unsupervised_Learning.ipynb
S16 - Neural Networks/: sprint_16.ipynb
Sprint 10 - data processing/: Sprint10_Data_Preprocessing.ipynb
TAREAS/: AI_Intro_Task_v2.ipynb
optimization-tasks/: Optimization_Tasks.ipynb
search-algorithms-AI/: Search_Tasks_L1.ipynb
