[project]
name = "tareas"
version = "0.1.0"
requires-python = "==3.12"
dependencies = [
    "numpy>=1.26,<3",
    "matplotlib>=3.8,<4",
    "pandas>=2.2,<3",
    "scikit-learn>=1.3,<1.6",
    "scikit-learn-extra>=0.3.0",
    "jupyterlab>=4.0,<5",
    "ipykernel>=6.29,<7",
    "seaborn>=0.13.2",
    "plotly>=6.8.0",
    "bokeh>=3.9.1",
    "jupyter-bokeh>=4.1.0",
]

[tool.uv]
# opcional pero recomendado para notebooks
dev-dependencies = []
