[project]
name = "tareas"
version = "0.1.0"
requires-python = "==3.12"
dependencies = [
    "numpy>=1.26.4,<3",
    "pandas>=2.2.3,<3",
    "scikit-learn>=1.5.2,<1.8",
    "jupyterlab>=4.3,<5",
    "ipykernel>=6.29.5,<7",
]

[tool.uv]
# opcional pero recomendado para notebooks
dev-dependencies = []
