[project]
name = "tareas"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = [
    # Base científica
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "scipy==1.13.1",
    # Notebooks
    "jupyterlab==4.3.5",
    "ipykernel==6.29.5",
    # NLP clásico
    "nltk==3.8.1",
    "gensim==4.3.3",
    "autocorrect==2.6.1",
    # Visualización
    "matplotlib==3.9.2",
    "wordcloud==1.9.4",
    "pillow==11.0.0",
    # Web scraping
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    # Deep Learning
    "tensorflow==2.18.0",
    # Hugging Face
    "transformers==4.46.3",
    "tokenizers==0.20.3",
    "safetensors==0.4.5",
    # PyTorch
    "torch==2.5.1",
    # Traducción Marian
    "sentencepiece==0.2.0",
    "sacremoses==0.1.1",
    # Utilidades
    "tqdm==4.67.1",
    "tf-keras>=2.18.0",
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "flake8",
]
